  * gdcmPython/CMakeLists.txt: SWIG_FLAGS doesn't declare includeall
    to avoid inclusion recursion until STL is reached.
  * src/gdcmDocument.[h|cxx]: exceptions substituted to errno C-style
    mecanism. errno.h is not included in gdcm anymore.
  * src/gdcmException.h: introduced new gdcmFormatUnexpected class
    (gdcmFormatError now inherits from gdcmFormatUnexpected).
  * TODO updated

2004-07-06 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * src/gdcmDicomDir.cxx, gdcmDocEntrySet.cxx: removed inclusion of errno.h
  * src/gdcmDocument.[h|cxx], gdcmFile.[h|cxx], gdcmHeader.[h|cxx]:
    enable_sequences removed from gdcmHeader constructor and dependencies.
  * Example/PrintHeader.cxx: fixed accordingly (enable_sequences removal).
  * gdcmPython/demo/PrintHeader.py: dummy fix.
  * src/gdcmDocument.[h|cxx], gdcmFile.[h|cxx], gdcmHeader.[h|cxx]:
    skip_shadow removed from gdcmHeader constructor and dependencies.
  * Example/*.cxx and Test/*.cxx changed accordingly.

2004-07-27 Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
  * Test/CMakeLists.txt: newly re-introduced SIEMENS_Sonata-12-MONO2-SQ.dcm
    in gdcmData (previously known as E00001S03I0015.dcm) is blacklisted.

2004-07-21 Jean-Pierre Roux
  * FIX Now, Parsing and Printing a DICOMDIR do work!
       ( troubles remain in makeDicomDir and BuildUpDicomDir :-(
		 
2004-07-20 Jean-Pierre Roux
  * FIX Some brain damaged headers have Zero-Lenght fields 
        for 'Transfert Syntax UID', or 'Media Stored SOP Class UID'.

2004-07-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmCommon.h, gdcmDict.cxx, gdcmTS.cxx : bug fix for msvc6 compilation
   * src/gdcmDebug.[h|cxx] : bug fix for msvc6 compilation. Replace the dbg
     variable (instance of gdcmDebug) by a definition macro, and the instance
     is now in static in the gdcmDebug class
   * src/gdcmSQItem.h : (FIXME) remove an undefined method
   * Test/PrintAllDocument.cxx : bug fix in the result of the test
