@@ -18,7 +18,7 @@ int main(int argc, char* argv[])
       fileName += "/test.acr";
    }
    
-   e1= new gdcmHeader( fileName.c_str(), false );
+   e1= new gdcmHeader( fileName.c_str() );
 
    f1 = new gdcmFile(e1);
 
